# eater_snek

./: CMakeLists.txt
src/: AbstractAppalStore.h  AbstractLevel.h  Appal.cpp  Appal.h  CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  Level.cpp  Level.h  MainWindow.cpp  MainWindow.h  Snek.cpp  Snek.h  SnekCommands.cpp  SnekCommands.h  Wall.cpp  Wall.h  eater_snek.ui  main.cpp  params.h  pathfinding.cpp  pathfinding.h  snek_enums.cpp  snek_enums.h
test/: CMakeLists.txt  pathfinding_check.cpp
